docker-scripts/echo/echo.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  echo
  labels:
    name: echo
