docker-scripts/echo/echo.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: echo
  labels:
    name: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - '-text="hello world"'
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5678
          name: http
          protocol: TCP
