docker-scripts/echo/echo.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo
  labels:
    name: echo
spec:
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: http
