docker-scripts/echo/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - echo.arendse.xyz
    secretName: arendse.xyz-tls
  rules:
  - host: echo.arendse.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
